lots of changes

--- a/code/app-config.json
+++ b/code/app-config.json
@@ -16,7 +16,7 @@
         "pages": [{
                 "name": "My Files",
                 "path": "/home",
-                "icon": "fa-folder-open",
+                "icon": "fa-home",
                 "pageSrc": "home.html"
             }
         ]
